acmeair-mainservice-java/manifests-openshift-nfs/acmeair-mainservice-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: acmeair-main-route
spec:
  host: defaultacmeair.com
  path: /acmeair
  to:
    kind: Service
    name: acmeair-main-service
